--- a/pdf/templates/pdf/base.html
+++ b/pdf/templates/pdf/base.html
@@ -11,47 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <form method="POST">
-        {% csrf_token %}
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
-          </div>          
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-          </div>
-          <div class="form-group col-md-6">
-              <label for="inputPassword4">Phone</label>
-              <input type="text" class="form-control" id="phone" name="phone" placeholder="11 numbers">
-            </div>          
-            <div class="form-group col-md-6">
-              <label for="inputPassword4">Linkedin</label>
-              <input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="https://linkedin/profilename">
-            </div>            
-            <div class="form-group col-md-6">
-              <label for="inputPassword4">University Name</label>
-              <input type="password" class="form-control" id="university" name="university" placeholder="E-Just">
-            </div>           
-            <div class="form-group col-md-6">
-              <label for="inputPassword4">Work Experiance</label>
-              <input type="text" class="form-control" id="work" name="work" placeholder="Last Company Name">
-            </div>           
-            <div class="form-group col-md-6">
-              <label for="inputPassword4">Add a skill</label>
-              <input type="text" class="form-control" id="skill" name="skill" placeholder="Team Work">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="inputAddress">Summary</label>
-                <textarea type="text" class="form-control" id="summary" name="summary" placeholder="1234 Main St"></textarea>
-            </div>
-            
-            <div class="form-group col-md-6">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-      </form>
-
+  <h1>write add</h1>
     {% block body %}
     {% endblock body %}
     
